fix parallax image size on mobile

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -84,7 +84,6 @@ nav a:active {
 }
 .hero { 
     background-image: url('https://images.unsplash.com/photo-1583555858049-1996e7cad049?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80');
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -121,7 +120,6 @@ nav a:active {
 
 .spacer1 { 
     background-image: url('https://images.unsplash.com/photo-1587982704600-e5f79d652fe5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -158,7 +156,6 @@ nav a:active {
 
 .spacer2 { 
     background-image: url('https://images.unsplash.com/photo-1597528662465-55ece5734101?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1934&q=80');
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -194,7 +191,6 @@ nav a:active {
 .spacer3 { 
     background-image: url('https://images.unsplash.com/photo-1421986598195-0d9c26ecfcde?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1955&q=80');
     opacity: 0.8;
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -219,7 +215,7 @@ nav a:active {
 
 
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-device-width: 480px){
     nav { 
         margin: 0px;
         padding: 5px; 
@@ -227,9 +223,13 @@ nav a:active {
         height: 5vh; 
         max-width: 100vw;  
     }
+
     .container { 
         display: flex;
         flex-direction: column;
+    }
+    .about { 
+        min-width: 100vw;
     }
     .location { 
         display: flex;
